2012-07-27  Paul Fitzpatrick  <paul@robotrebuilt.com>

	* src/libYARP_OS/include/yarp/os/idl/WireTypes.h: stdint not
	available on older MSVC versions [thanks Ugo Pattacini]

2012-07-26  Daniele E. Domenichelli <daniele.domenichelli@iit.it>

	* extern/gtkdatabox/CMakeLists.txt,
	  extern/gtkdataboxmm/CMakeLists.txt,
	  extern/sqlite/CMakeLists.txt, extern/tinyxml/CMakeLists.txt:
	  Compile static libraries with position indipendent code
	  [thanks Lorenzo Natale]

2012-07-25  Daniele E. Domenichelli <daniele.domenichelli@iit.it>

	* conf/YarpFindDependencies.cmake: Move checks for dependencies
	  in this file.

	* README.txt: Remove references to autotools in documentation.

	* CMakeLists.txt, etc: Fixes, cleanup, etc.

	* example/matrix/CMakeLists.txt, example/matrix/basic_ops.cpp,
	  example/motorcontrol/CMakeLists.txt,
	  example/nvidia/progs/FP-resize.cg,
	  example/nvidia/progs/motion.cg, example/os/ratethread.cpp,
	  example/portaudio/CMakeLists.txt,
	  example/portaudio/sound_loopback.cpp,
	  example/portaudio/sound_receiver.cpp,
	  example/portaudio/sound_sender.cpp,
	  example/rand/CMakeLists.txt, example/rand/rand.cpp,
	  example/stressTests/scripts/grind,
	  example/stressTests/scripts/hammer,
	  example/stressTests/scripts/hammer-yarp-server,
	  example/swig/src/Example3.java: fix permissions.

2012-07-25  Daniele E. Domenichelli <daniele.domenichelli@iit.it>

	* src/yarpscope/src/DataPlot.cpp, src/yarpscope/src/DataPlot.h,
	  src/yarpscope/src/PlotManager.cpp,
	  src/yarpscope/src/PlotManager.h,
	  src/yarpscope/src/XmlLoader.cpp: Read minval and maxval as
          float in yarpscope.

2012-07-24  Paul Fitzpatrick  <paul@robotrebuilt.com>

	* src/modules/kinect/OpenNI/KinectYarpDeviceServerLib: apply 
	patch for "no mirror" option [thanks Juan G Victores]

2012-07-23  Daniele E. Domenichelli <daniele.domenichelli@iit.it>

	* automake.am, configure.ac: Remove autotools buildsystem no longer
	  supported.
